tests/baselines/reference/importESMPackage.errors.txt
/index.ts(1,8): error TS1192: Module '"/node_modules/dep/index"' has no default export.


==== /node_modules/dep/package.json (0 errors) ====
    {
        "name": "dep",
        "version": "1.0.0",
        "type": "module",
        "main": "index.js"
    }
    
==== /node_modules/dep/index.d.ts (0 errors) ====
    export declare const foo: string;
    
==== /index.ts (1 errors) ====
    import dep from "dep"; // Error
           ~~~
!!! error TS1192: Module '"/node_modules/dep/index"' has no default export.
    dep.foo;
    